@@ -21,6 +21,8 @@ MNEMOSYNE 1.0.1
 -Added new option in config.py (backups_to_keep) to be able to change the
  number of daily backups to keep. Set to -1 for no limit (requested by 
  Patrick Kenny).
+-Added new option in config.py (day_starts_at) to be able to change the
+ moment a new day starts (requested by Patrick Kenny).	
 -On Windows, log errors to a file in the user's directory, as opposed to a
  file in a system directory (requested by nairbv).
 -Visually distinguish grades 0 and 1 from other grades (based on input
